deployment/portfolio-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-demo
  template:
    metadata:
      labels:
        app: portfolio-demo
    spec:
      containers:
      - name: app
        image: patrykoo/nextcloud-exporter
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-demo-svc
  namespace: default
  labels:
    app: portfolio-demo
spec:
  selector:
    app: portfolio-demo
  ports:
  - port: 80
    name: http
    targetPort: 8082
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-grafana-route
  namespace: monitoring 
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "portfolio.balc-tech.pl"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-grafana
      port: 80
